      and a d-i iso copied in. As they're quite big (and sparse),
      they are gzipped.
    - NB: The above change means you need 128+ mb more free space to
      build this package on i386.
    - If System.map is included in the kernel image udeb, pass it to depmod
      via -F and delete it when done. This is to support building on systems
      running 2.6.

 -- Joey Hess <joeyh@debian.org>  Sat, 13 Dec 2003 18:44:06 -0500

debian-installer (20031212) unstable; urgency=low

  * Joey Hess
    - Switch i386 to using dhcp-client rather than pump for netboot.
      Left it using pump on other arches that did not already use dhcp-client,
      at least for now.
    - Switch i386, hppa, and ia64 to dhcp-client rather than udhcp
      on the root floppy.
    - Switch powerpc to pump on the root floppy.
    - Switch i386 to dhcp-client rather than udhcp on the access floppy.
    - Switch from pump to dhcp-client on powerpc.
    - Add disk labels to the i386 floppy images, for use by the bootfloppy
      initrd, and maybe later by the floppy retreiver, etc.
    - In debian/rules, if the changelog is UNRELEASED, use unstable as the
      DISTRIBUTION.
    - makelabel takes the build date as its second parameter. Calculating
      BUILD_DATE once at the start to avoid inconsistencies during
      long/midnight builds.
    - Add MEDIA_TYPE to configs for bootable image types.
    - Add DEBIAN_VERSION to config.
    - Add bootscreen-subst to substitute these variables into boot screens.
    - Make a syslinux help screen, for all i386 syslinuxed boot media.
      Includes the build date, debian version, and media type, and is derived
      from isolinux help texts on the sarge cds, but modified to actually
      match d-i:
        - remove boot flavor docs, as we currently have no flavors
        - remove rescue stuff, as d-i is not currently also a rescue disk
        - reduce number of colors used for cleaner look
        - remove mention of non-free